fix(ci): keep HA1220 outline test Java 8 compatible